Fix linespacing, sidebarsize, transcriptionfont, scrolljump

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -44,3 +44,7 @@
 .scrollPaddingRight {
   padding-right: 10px;
 }
+
+html {
+  overflow-y: scroll;
+}
